--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
+    "sanity": "^3.5.0",
     "stripe": "^11.12.0"
   },
   "devDependencies": {
