--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@heroicons/react": "^1.0.6",
     "@portabletext/react": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@sanity/cli": "^3.5.0",
     "@sanity/image-url": "^1.0.2",
     "@stripe/stripe-js": "^1.47.0",
+    "global": "^4.4.0",
     "next": "latest",
     "next-auth": "^4.19.2",
     "next-auth-sanity": "^1.4.4",
