--- a/sanitythebodycarebasics/package.json
+++ b/sanitythebodycarebasics/package.json
@@ -15,7 +15,9 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.0.0",
+    "@sanity/cli": "^3.5.0",
+    "@sanity/vision": "^3.5.0",
+    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
