--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@sanity/cli": "^3.5.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.5.0",
     "@stripe/stripe-js": "^1.47.0",
     "global": "^4.4.0",
     "next": "latest",
